createRoom() 메소드 완성 및 prepareSharingUserList(), updateShareRoomStatus() 가변 리스트변경, OttShareRoomResponse.from() 메소드 build수정 - SharingUserInRoomReseponse 클래스 새로 생성